--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,12 @@
     "builds": [
         {
             "src": "dist/server.js",
-            "use": "@vercel/node",
-            "config": { "includeFiles": ["dist/*"] }
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.)",
+            "src": "/(.*)",
             "dest": "dist/server.js"
         }
     ]
